<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/title_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_marginTop="87dp"
        android:id="@+id/lightsTitle"
        android:textSize="26sp"
        android:textColor="@color/colorLightGreen1" />

    <Switch
        android:text="@string/normal_light"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lightsTitle"
        android:layout_marginLeft="80dp"
        android:layout_alignRight="@+id/dimmSwitch"
        android:layout_marginTop="70dp"
        android:id="@+id/normalSwitch"
        android:textSize="20sp"
        android:textColor="@color/colorDarkGreen1" />

    <Switch
        android:text="@string/high_beam"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/normalSwitch"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/dimmSwitch"
        android:id="@+id/highSwitch"
        android:textSize="20sp"
        android:textColor="@color/colorDarkGreen1" />

    <Switch
        android:text="@string/dimm_light"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highSwitch"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:id="@+id/dimmSwitch"
        android:textSize="20sp"
        android:textColor="@color/colorDarkGreen1" />

    <Button
        android:text="@string/save_data"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/dimmSwitch"
        android:layout_alignRight="@+id/dimmSwitch"
        android:layout_marginStart="59dp"
        android:layout_marginTop="32dp"
        android:id="@+id/addLight"
        android:textColor="@color/colorDarkGreen1"
        android:background="@color/colorLightGreen2" />

</RelativeLayout>