<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marklee.group12_final_project.TestActivity">

    <ListView
        android:id="@+id/scheduleList"
        android:layout_width="368dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:id="@+id/TemperatureView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:gravity="right"
        android:text="@string/temperature"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleList"
        tools:layout_editor_absoluteY="333dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/SetupView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/set_time"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TemperatureView"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteItem"
        app:layout_constraintLeft_toRightOf="@+id/btAdd"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/btAdd"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/btUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/updateList"
        app:layout_constraintLeft_toRightOf="@+id/btDelete"
        app:layout_constraintTop_toTopOf="@+id/btAdd" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/addItem"
        app:layout_constraintLeft_toLeftOf="@+id/SetupView"
        app:layout_constraintTop_toBottomOf="@+id/SetupView" />

    <Button
        android:id="@+id/btTime"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/SetupView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/SetupView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SetupView"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/TemperatureView"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/TemperatureView"
        android:layout_marginLeft="0dp" />
        <!--android:background="@color/gray"-->
        app:layout_constraintBottom_toBottomOf="@+id/TemperatureView"
        app:layout_constraintLeft_toRightOf="@+id/TemperatureView"
        app:layout_constraintTop_toTopOf="@+id/TemperatureView"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
