<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marklee.group12_final_project.TestActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:weightSum="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="297dp" />
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_setting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:context="com.example.marklee.group12_final_project.TestActivity">

        <Button
            android:id="@+id/bt_garage"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@android:drawable/bottom_bar"
            android:text="@string/garageOpener"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <FrameLayout
            android:id="@+id/frame_garage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_garage"></FrameLayout>

        <Button
            android:id="@+id/bt_house_temperature"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:background="@android:drawable/bottom_bar"
            android:text="@string/houseTemperature"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_garage" />

        <FrameLayout
            android:id="@+id/frame_house_temperature"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_house_temperature"></FrameLayout>

        <Button
            android:id="@+id/bt_outside_weather"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:background="@android:drawable/bottom_bar"
            android:text="@string/outsideWeather"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_house_temperature" />

        <FrameLayout
            android:id="@+id/frame_outside_weather"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_outside_weather"></FrameLayout>

        <Button
            android:id="@+id/bt_schedule"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:background="@android:drawable/bottom_bar"
            android:text="@string/adjustSchedule"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_outside_weather" />

        <FrameLayout
            android:id="@+id/frame_schedule"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_schedule"></FrameLayout>

        <FrameLayout
            android:id="@+id/frame_version"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_schedule"></FrameLayout>

        <ListView
            android:id="@+id/scheduleList"
            android:layout_width="368dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_version"
            app:layout_constraintVertical_bias="0.47" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>


